argocd/media/overseerr-k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-k8s-deployment
  labels:
    app: overseerr-k8s
spec:
  selector:
    matchLabels:
      app: overseerr-k8s
  template:
    metadata:
      labels:
        app: overseerr-k8s
    spec:
      containers:
      - name: overseerr-k8s
        image: lscr.io/linuxserver/overseerr:latest
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
        - name: config
          mountPath: "/config"
          readOnly: false
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 400m
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "overseerr-k8s-spc"
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-k8s-pvc
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - api.github.com
          - api.themoviedb.org
          - plex.tv
        options:
          - name: ndots
            value: "1"
