argocd/media/overseerr-k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-k8s-service
spec:
  selector:
    app: overseerr-k8s
  ports:
    - protocol: TCP
      port: 4545
      targetPort: 4545
