argocd/media/overseerr-k8s/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-k8s-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: overseerr-k8s-service
        port: 5055
      middlewares:
      - name: private-ips-allow
        namespace: kube-system
  tls:
    secretName: overseerr-k8s-certificate
